--- a/app/blog.html
+++ b/app/blog.html
@@ -22,23 +22,23 @@
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__list-item">
-                                <a class="menu__list-link " href="#">About</a>
+                                <a class="menu__list-link " href="about.html">About</a>
                             </li>
                             <li class="menu__list-item">
-                                <a class="menu__list-link" href="#">Gallery</a>
+                                <a class="menu__list-link" href="gallery.html">Gallery</a>
                             </li>
                         </ul>
                     </nav>
-                    <a class="logo" href="#">
+                    <a class="logo" href="index.html">
                         <img src="images/logo.svg" alt="logo">
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__list-item">
-                                <a class="menu__list-link menu__list-link--active" href="#">Blog</a>
+                                <a class="menu__list-link menu__list-link--active" href="blog-1.html">Blog</a>
                             </li>
                             <li class="menu__list-item">
-                                <a class="menu__list-link" href="#">Contact</a>
+                                <a class="menu__list-link" href="contacts.html">Contact</a>
                             </li>
                         </ul>
                     </nav> <button class="header__btn-menu">
@@ -102,7 +102,7 @@
                             <div class="blog__item article-popup">
                                 <div class="article-popup__box">
                                     <img class="blog__item-img-video" src="images/blog/4.jpg" alt="images">
-                                    <a class="blog__item-popup" data-fancybox href="https://youtu.be/YMklBBnKJDg">
+                                    <a class="blog__item-popup" data-fancybox href="https://www.youtube.com/watch?v=Zx9k4R4g5rs">
                                         <img class="blog__item-play" src="images/play-button.svg" alt="play button">
                                     </a>
                                     <div class="blog__item-info">
